Trim gitignore, thanks to no-littering-mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,14 @@
+/private.el
+/lib/private.el
+/lib/private.gpg
+/lib/elfeed.org
 *.elc
-/elpa/
-/persp-confs/
-/projectile-bookmarks.eld
 *~
-/ac-comphist.dat
-/bookmarks/
+/elpa/
+/etc/
+/var/
 /custom.el
-/semanticdb/
-/nrepl-history
 /eshell/history
 /eshell/lastdir
-/url/
-/var/
-/tramp
-/private.el
-/org-clock-save.el
-/lib/private.el
-/history
-/helm-adaptive-history
-/places
-/projectile.cache
-/.mc-lists.el
-/company-statistics-cache.el
 /eshell/z
-/lib/elfeed.org
 /.persistent-scratch
-/lib/private.gpg
-/recentf
-magithub/
